fix: fix footer overlap

--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@
 
 body {
     background: rgb(23, 23, 29);
+    margin-bottom: 40px;
 }
 
 h1 {
@@ -387,11 +388,13 @@ input:focus::placeholder {
     background-color: rgb(15, 15, 15);
     color: darkgray;
 
-    position: absolute;
+    position: fixed;
     left: 0px;
-    bottom: -0px;
+    bottom: 0px;
     width: 100%;
     height: 30px;
+
+    margin-top: 10px;
 }
 
 .footer_text
@@ -471,6 +474,32 @@ input:focus::placeholder {
 }
 
 #settings_menu:after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -2;
+
+    animation: fadeIn 0.5s;
+}
+
+#stats_menu:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgb(40, 40, 40);
+    z-index: -1;
+
+    animation: fadeIn 0.5s;
+}
+
+#stats_menu:after {
     position: fixed;
     content: "";
     top: 0;
